[package]
name = "kamino"
version = "1.1.0"
edition = "2021"
authors = ["Steve Heindel <stevenheindel@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Help manage a bunch of git repo clones by ensuring they are in sync with the remote."
repository = "https://github.com/schteve/kamino"
readme = "README.md"
keywords = ["git", "repo", "sync"]
categories = ["command-line-interface", "development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
static_ssl = ['openssl/vendored']

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
git2 = "0.15.0"
sha2 = "0.10.2"
thiserror = "1.0.34"
anyhow = "1.0.64"

[dependencies.openssl]
# If compiling on a system without OpenSSL installed, or cross-compiling for a different
# architecture, enable this feature to compile OpenSSL as part of the build.
# See https://docs.rs/openssl/#vendored for more.
# Also see https://stackoverflow.com/questions/54775076/how-to-cross-compile-a-rust-project-with-openssl
version = "0"
features = ["vendored"]
optional = true # Don't enable on a normal build, only use vendored if it's manually enabled

[dev-dependencies]
tempfile = "3.3.0"
